[tool.poetry]
name = "Workflow Testing"
version = "1.0.0"
description = "Testing out github workflows"
authors = ["Moritz Sauter <sautermoritz@gmx.de>"]
readme = "README.md"

packages = [{ include = "hello_world", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.11.4"
mypy = "^0.991"
pylint = "^2.15.10"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry_core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120

[tool.pylint.master]
jobs = 0

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "fixme",
    "useless-import-alias",
]

enable = ["useless-suppression"]

[tool.mypy]
python_version = "3.10"
files = "src"

strict = true

warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

disallow_untyped_defs = true
no_implicit_optional = true

show_error_context = true
show_error_codes = true
show_column_numbers = true
pretty = true

enable_error_code = ["ignore-without-code"]
